syntax = "proto3";

import "client.proto";

message C2S
{
	string key = 1;
	GamerLoginC2S gamerLoginC2S = 2;
	GamerLoginGetDataC2S gamerLoginGetDataC2S = 3;
	ServerTimeC2S serverTimeC2S = 4;
	GamerSubChatChannelC2S gamerSubChatChannelC2S = 5;
	GamerFriendChatC2S gamerFriendChatC2S = 6;
	GamerWorldChatC2S gamerWorldChatC2S = 7;
	GamerTestChatC2S gamerTestChatC2S = 8;
	GamerClubRequestC2S gamerClubRequestC2S = 9;
	GamerNewFriendReqC2S gamerNewFriendReqC2S = 10;
	GamerProcessFriendReqC2S gamerProcessFriendReqC2S = 11;
	GamerGetMailC2S gamerGetMailC2S = 12;
	GamerDelMailC2S gamerDelMailC2S = 13;
	GamerDelHaveReadMailC2S gamerDelHaveReadMailC2S = 14;
	GamerOneKeyRcvMailRewardC2S gamerOneKeyRcvMailRewardC2S = 15;
	GamerChangeMailStateC2S gamerChangeMailStateC2S = 16;
	GamerMatchC2S gamerMatchC2S = 17;
	GamerPVPSyncC2S gamerPVPSyncC2S = 18;
	GamerGetRealTimeRankC2S gamerGetRealTimeRankC2S = 19;
	GamerCheckPVPBattleC2S gamerCheckPVPBattleC2S = 20;
	GamerUploadWXInfoC2S gamerUploadWXInfoC2S = 21;
	CreateLeagueC2S createLeagueC2S = 22;
	GamerGetBackpackC2S gamerGetBackpackC2S = 23;
	GamerSellItemC2S gamerSellItemC2S = 24;
	GamerUseItemC2S gamerUseItemC2S = 25;
	GamerCompoundItemC2S gamerCompoundItemC2S = 26;
	GamerSplitItemC2S gamerSplitItemC2S = 27;
	GamerGetActorListC2S gamerGetActorListC2S = 28;
	GamerChangeActorNameC2S gamerChangeActorNameC2S = 29;
	GamerActorUpLevelC2S gamerActorUpLevelC2S = 30;
	GMC2S gMC2S = 31;
	BuildLevelUpC2S buildLevelUpC2S = 32;
	BuildEndOfLevelUpC2S buildEndOfLevelUpC2S = 33;
	BuildBreakUpC2S buildBreakUpC2S = 34;
	BuildSpeedUpC2S buildSpeedUpC2S = 35;
	BuildGetProductC2S buildGetProductC2S = 36;
	ActorEnterBuildC2S actorEnterBuildC2S = 37;
	ActorLeaveBuildC2S actorLeaveBuildC2S = 38;
	GamerGetIntelligenceC2S gamerGetIntelligenceC2S = 39;
	GamerExtractIntelligenceC2S gamerExtractIntelligenceC2S = 40;
	GamerIntelligenceTreasureChestC2S gamerIntelligenceTreasureChestC2S = 41;
	GamerIntelligenceParseC2S gamerIntelligenceParseC2S = 42;
	StudioC2S studioC2S = 43;
	StudioStoryListC2S studioStoryListC2S = 44;
	StudioStorySelectC2S studioStorySelectC2S = 45;
	StudioActorSelectC2S studioActorSelectC2S = 46;
	StudioEventOptionSelectC2S studioEventOptionSelectC2S = 47;
	StudioStarC2S studioStarC2S = 48;
	StudioNextStepC2S studioNextStepC2S = 49;
	StudioContinuedListC2S studioContinuedListC2S = 50;
	StudioContinuedReceiveC2S studioContinuedReceiveC2S = 51;
	StudioContinuedReceiveAllC2S studioContinuedReceiveAllC2S = 52;
}